fix: private topics and user id
